--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -9,6 +9,7 @@
     text-align: center;
     color: variaveis.$corDeTextoPrincipal;
     position: relative;
+    overflow: hidden;
 
     &::before {
         content: "";
@@ -23,7 +24,7 @@
     }
 
     &__content {
-        position: relative;
+        position: absolute;
         z-index: 2;
         padding: 20px;
     }
@@ -39,5 +40,21 @@
         font-style: italic;
         margin-top: 20px;
         text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+    }
+
+    @media (max-width: 768px) {
+        &::before {
+            background-size: cover;
+            background-position: center;
+        }
+
+        &__title {
+            font-size: 10vw;
+        }
+
+        &__quote {
+            font-size: 4vw;
+            margin-top: 15px;
+        }
     }
 }
