--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,8 +8,16 @@
 @use 'topic';
 @use 'footer';
 
-body {
-    background-color: #000;
-    font-family: "Alumni Sans Pinstripe", sans-serif;
+*,
+*::before,
+*::after {
+    box-sizing: border-box; 
 }
+
+body {
+    background-color: variaveis.$corDeFundo;
+    font-family: "Alumni Sans Pinstripe", sans-serif;
+    overflow-x: hidden; 
+}
+
 
