--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -21,6 +21,7 @@
         justify-content: space-between;
         max-width: 1200px;
         width: 100%;
+        flex-direction: row; 
     }
 
     &__content {
@@ -58,6 +59,37 @@
             width: 80%; 
             height: auto;
             border-radius: 10px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        &__container {
+            flex-direction: column; 
+            align-items: center;
+        }
+
+        &__content {
+            width: 100%; 
+            padding-right: 0;
+            margin-bottom: 20px; 
+            text-align: center; 
+        }
+
+        &__title {
+            font-size: 8vw; 
+        }
+
+        &__list {
+            font-size: 6vw; 
+            margin-bottom: 15px; 
+            text-align: center; 
+        }
+
+        &__image {
+            width: 90%; 
+            img {
+                width: 100%;
+            }
         }
     }
 }
