--- a/src/styles/images.scss
+++ b/src/styles/images.scss
@@ -2,7 +2,7 @@
 
 .full-screen-image {
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
     position: relative;
     overflow: hidden;
 
@@ -12,8 +12,15 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: url('../images/secao.jpg') center/cover no-repeat; 
+        background: url('../images/secao.jpg') center/cover no-repeat;
         background-size: cover;
         background-position: center;
+    }
+
+    @media (max-width: 768px) {
+        &__background {
+            background-size: contain; 
+            background-position: center center; 
+        }
     }
 }
