--- a/src/styles/keys.scss
+++ b/src/styles/keys.scss
@@ -84,4 +84,27 @@
             box-shadow: 0 10px 20px rgba(255, 255, 255, 0.2);
         }
     }
+
+    @media (max-width: 768px) {
+        &__grid {
+            grid-template-columns: 1fr; 
+            grid-template-rows: auto;
+        }
+
+        &__item {
+            height: auto; 
+        }
+
+        h3 {
+            font-size: 5vw; 
+        }
+
+        p {
+            font-size: 4vw; 
+        }
+
+        &--one, &--two, &--three, &--four {
+            background-size: cover;
+        }
+    }
 }
